--- a/cr/icip/refs.bib
+++ b/cr/icip/refs.bib
@@ -8,4 +8,174 @@
   pages = 	 "803-806"
 }
 
+@article{wallace1992jpeg,
+  title={The JPEG still picture compression standard},
+  author={Wallace, Gregory K},
+  journal={IEEE transactions on consumer electronics},
+  volume={38},
+  number={1},
+  pages={xviii--xxxiv},
+  year={1992},
+  publisher={IEEE}
+}
 
+@article{amfm_pami2011,
+ author = {Arbelaez, Pablo and Maire, Michael and Fowlkes, Charless and Malik, Jitendra},
+ title = {Contour Detection and Hierarchical Image Segmentation},
+ journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+ issue_date = {May 2011},
+ volume = {33},
+ number = {5},
+ month = may,
+ year = {2011},
+ issn = {0162-8828},
+ pages = {898--916},
+ numpages = {19},
+ url = {http://dx.doi.org/10.1109/TPAMI.2010.161},
+ doi = {10.1109/TPAMI.2010.161},
+ acmid = {1963088},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {Contour detection, image segmentation, computer vision.},
+}
+
+@article{hofbauer2016identifying,
+  title={Identifying deficits of visual security metrics for images},
+  author={Hofbauer, Heinz and Uhl, Andreas},
+  journal={Signal Processing: Image Communication},
+  volume={46},
+  pages={60--75},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@inproceedings{mao2004security,
+  title={Security evaluation for communication-friendly encryption of multimedia},
+  author={Mao, Yinian and Wu, Min},
+  booktitle={Image Processing, 2004. ICIP'04. 2004 International Conference on},
+  volume={1},
+  pages={569--572},
+  year={2004},
+  organization={IEEE}
+}
+
+@article{chen2004symmetric,
+  title={A symmetric image encryption scheme based on 3D chaotic cat maps},
+  author={Chen, Guanrong and Mao, Yaobin and Chui, Charles K},
+  journal={Chaos, Solitons \& Fractals},
+  volume={21},
+  number={3},
+  pages={749--761},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{mao2004novel,
+  title={A novel fast image encryption scheme based on 3D chaotic baker maps},
+  author={Mao, Yaobin and Chen, Guanrong and Lian, Shiguo},
+  journal={International Journal of Bifurcation and Chaos},
+  volume={14},
+  number={10},
+  pages={3613--3624},
+  year={2004},
+  publisher={World Scientific}
+}
+
+@article{wang2004image,
+  title={Image quality assessment: from error visibility to structural similarity},
+  author={Wang, Zhou and Bovik, Alan C and Sheikh, Hamid R and Simoncelli, Eero P},
+  journal={IEEE transactions on image processing},
+  volume={13},
+  number={4},
+  pages={600--612},
+  year={2004},
+  publisher={IEEE}
+}
+
+@inproceedings{said2005measuring,
+  title={Measuring the strength of partial encryption schemes},
+  author={Said, Amir},
+  booktitle={IEEE International Conference on Image Processing 2005},
+  volume={2},
+  pages={II--1126},
+  year={2005},
+  organization={IEEE}
+}
+
+@inproceedings{pinto2013protection,
+  title={Protection of JPEG compressed e-comics by selective encryption},
+  author={Pinto, Michael and Puech, William and Subsol, G{\'e}rard},
+  booktitle={2013 IEEE International Conference on Image Processing},
+  pages={4588--4592},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{qian2014reversible,
+  title={Reversible data hiding in encrypted JPEG bitstream},
+  author={Qian, Zhenxing and Zhang, Xinpeng and Wang, Shuozhong},
+  journal={IEEE Transactions on Multimedia},
+  volume={16},
+  number={5},
+  pages={1486--1491},
+  year={2014},
+  publisher={IEEE}
+}
+
+@inproceedings{niu2008jpeg,
+  title={JPEG encryption with file size preservation},
+  author={Niu, Xiam and Zhou, Chongqing and Ding, Jianghua and Yang, Bian},
+  booktitle={Intelligent Information Hiding and Multimedia Signal Processing, 2008. IIHMSP'08 International Conference on},
+  pages={308--311},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{unterweger2012length,
+  title={Length-preserving Bit-stream-based JPEG Encryption},
+  author={Unterweger, Andreas and Uhl, Andreas},
+  booktitle={Proceedings of the on Multimedia and security},
+  pages={85--90},
+  year={2012},
+  organization={ACM}
+}
+
+@inproceedings{minemura2012jpeg,
+  title={JPEG image scrambling without expansion in bitstream size},
+  author={Minemura, Kazuki and Moayed, Zahra and Wong, KokSheik and Qi, Xiaojun and Tanaka, Kiyoshi},
+  booktitle={2012 19th IEEE International Conference on Image Processing},
+  pages={261--264},
+  year={2012},
+  organization={IEEE}
+}
+
+@article{ong2015beyond,
+  title={Beyond format-compliant encryption for JPEG image},
+  author={Ong, SimYing and Wong, KokSheik and Qi, Xiaojun and Tanaka, Kiyoshi},
+  journal={Signal Processing: Image Communication},
+  volume={31},
+  pages={47--60},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{li2007leak,
+  title={A leak and its remedy in JPEG image encryption},
+  author={Li, Weihai and Yuan, Yuan},
+  journal={International Journal of Computer Mathematics},
+  volume={84},
+  number={9},
+  pages={1367--1378},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
+
+@book{fernandez2012advanced,
+  title={Advanced Color Image Processing and Analysis},
+  author={William Puech, Adrian G. Bors and Jos\'{e} Marconi Rodrigues},
+  year={2013},
+  publisher={Springer Science \& Business Media},
+  chapter={Protection of Colour Images by Selective Encryption},
+  pages={397--421}
+  
+}
