--- a/cr/icip/icip.tex
+++ b/cr/icip/icip.tex
@@ -6,6 +6,7 @@
 \usepackage{spconf,amsmath,graphicx}
 \usepackage{pbox}
 \usepackage{subcaption}
+\usepackage{cite}
 
 % Example definitions.
 % --------------------
@@ -61,69 +62,102 @@ One, two, three, four, five
 %
 \section{Introduction}
 \label{sec:intro}
-More and more content is being shared everyday on the internet. Most of this content is trivial and does not need to be encrypted. Some of it however needs to be securely transfered, the problem of encryption arises. Full encryption with methods such as AES for exemple are often not needed in addition to not being possible due to computing power constraints. Instead, partial or selective encryption is used, where the goal is sufficient encryption. That is, the image is sufficently distorted and an attacker is not able to access the content. This distortion can be of varying magnitude, a strong distortion for exemple for DRM, or a lighter distortion, where the content is still recognizable to attract the viewers interest. \textit{TODO : encryption state of the art}.
+More and more content is being shared everyday on the internet. Most of this content is trivial and does not need to be encrypted. Some of it however needs to be securely transfered, the problem of encryption arises. Full encryption with methods such as AES for exemple are often not needed in addition to not being possible due to computing power constraints. Instead, partial or selective encryption is used, where the goal is sufficient encryption. That is, the image is sufficently distorted and an attacker is not able to access the content. This distortion can be of varying magnitude, a strong distortion for exemple for DRM, or a lighter distortion, where the content is still recognizable to attract the viewers interest.
 
   When an image is intented to be consumed by a human, the most accurate measure of its confidentiality is a Mean Opinion Score, where actual people rate the image. It is however not a realistic way to rate the distortion of an image as it is way to expensive and time consuming, security and quality metrics were introduced as a means to automate the process.
 
-According to \cite{metrics_deficits}, there is not yet a security metric that consistently rates images across all the MOS spectrum. Most quality metrics fail to predict a MOS on low quality images, precisely where it would be most important to do so : decide whether an image is confidential.
+  According to \cite{hofbauer2016identifying}, there is not yet a security metric that consistently rates images across all the MOS spectrum. Most quality metrics fail to predict a MOS on low quality images, precisely where it would be most important to do so : decide whether an image is confidential.
 
-We give a quick overview of a few selected metrics. For a more in-depth review, we refer the reader to \cite{metrics_deficits}.
+  The most popular image compression standard is JPEG \cite{wallace1992jpeg}.  This method of lossy compression is popular both in normal use and in research. In order to exploit both efficient compression and encryption, format compliant methods are designed to produce content compatible with format specifications. There exist format compliant JPEG encryption methods which can be use in this context. Partial encryption methods using sign encryption have been shown unsecure by Said \cite{said2005measuring}. partial encryption is applied selectively on automaticaly detected faces. This method which relies on XOR operation with the AES algorithm, performs the compression and the encryption in the same process. Partial encryption is sufficient to keep hiding sensitive information, such as text \cite{pinto2013protection}. Moreover,it has the advantage to not change the size of the encrypted file. A reversible watermarking method in encrypted domain is proposed by Qian \textit{et al.} \cite{qian2014reversible}. This method relies on XOR operation but for more visual masking author encrypt also quantization table. Blocks and coefficients scrambling is used in \cite{niu2008jpeg, unterweger2012length, minemura2012jpeg, ong2015beyond}. Simple scrambling methods tend to increase the size if there is no verification of the run-length for example. Inter-block shuffle and non-zeros AC scrambles methods have been shown insecure to sketch attack by Li and Yan \cite{li2007leak}.
+  % Other authors propose a specific format for compression of encrypted images \cite{}, which are limited due to the removing of redundancy by the encryption. Moreover, encrypted images should be compatible with most viewers, social network, cloud storage i.e. format compliant. JPEG crypto-compressed images should be recompressible with the aim to be adapted to a reduced bandwidth or limited storage, for example. 
 
-\textbf{PSNR :} Even though it is known that the PSNR is not well correlated with human judgment, it is still widely used due to its speed and ease of use. The range is [0; $+\infty$], where two identical images would have a PSNR of $+\infty$.
 
-\textbf{SSIM :} \cite{ssim}(Structural Similarity Index Measure). A luminance score, au contrast score and a structure score are combined to obtain the actual SSIM score. It has a range of [0;1] where identical images have a score of 1.
-
-\textbf{ESS :} \cite{ess_lss}(Edge Similarity Score). It uses non overlapping 8x8 block directions to compare images. With the range [0;1], a higher score reflects a less distorted image.
-
-\textbf{LSS :} \cite{ess_lss}(Luminance Similarity Score). It uses non overlapping 8x8 block average luminance to compare images. With the range [-8.5; 1] for default parameters of $\alpha=0.1$ and $\beta=3$, a higher score reflects a less distorted image.
-
-\textbf{NPCR :} \cite{npcr_uaci}It is the number of pixel changes between images. Its range is [0;100], where a fully encrypted image has a NPCR close to 100, where almost all the pixels changed.
-
-\textbf{UACI :} \cite{npcr_uaci}It is the unified averaged changed intensity. It is the average intensity difference between two images. Its range is [0;100], where a fully encrypted image has a value close to 33.
-
-\textbf{Entropy :} It is the amount of information in an image, for an 8-bit image, so an entropy of 8 would be the target for a full encryption method. It ranges from 0 to 8 in this case.
-
-\textbf{Correlation :} The correlation coefficient ranges from 0 to 1, it is the average correlation of adjacent pixels in an image, where a natural image would be highly correlated and a fully encrypted image would have low correlation.
-
-\newpage
+% \newpage
 \section{Creating the dataset}
 \label{sec:dataset}
 The cryptocompression method we use is targeted towards JPEG images. We have six parameters that we can enable or not to generate a cryptocompressed image. \textit{Shuffle} and \textit{xor} are the parameters that decide de actual encryption method. \textit{AC} and \textit{DC} control which part of the DCT will be encrypted and two additionnal parameters, \textit{chrominance} and \textit{luminance} decide which of the luminance, chrominance (or both) DCT coefficients will be encrypted. As there must be at least one encryption method, at least one type of coefficient, and chrominance or luminance selected, we have a total of 27 distortions with their different parameters. The distortions range from completely indecipherable images to almost invisible perturbations, as shown in Fig. \ref{fig:images}. This way, we hope to have appropriate distortions for different use cases
 
-\begin{figure}[ht]
+\begin{figure*}[ht]
 \centering
-\begin{subfigure}{4.3cm}
+\begin{subfigure}{2.9cm}
   \centering
-  \includegraphics[width=0.9\linewidth]{figures/140055}
+  \includegraphics[width=0.9\linewidth]{figures/274007}
   \caption{Original image}
   \label{fig:sub1}
 \end{subfigure}%
-\begin{subfigure}{4.3cm}
+\begin{subfigure}{2.9cm}
   \centering
-  \includegraphics[width=0.9\linewidth]{figures/ac_shuffle_xor_chrominance_luminance_76_140055}
-  \caption{ac shuffle xor chroma luma}
+  \includegraphics[width=0.9\linewidth]{figures/ac_dc_shuffle_xor_chrominance_luminance_76_274007}
+  \caption{MOS $\simeq$ 1}
   \label{fig:sub2}
 \end{subfigure}
-\begin{subfigure}{4.3cm}
+\begin{subfigure}{2.9cm}
   \centering
-  \includegraphics[width=0.9\linewidth]{figures/dc_xor_chrominance_luminance_76_140055}
-  \caption{dc xor chroma luma}
+  \includegraphics[width=0.9\linewidth]{figures/dc_shuffle_chrominance_luminance_76_274007}
+  \caption{MOS $\simeq$ 2}
+  \label{fig:sub2}
+\end{subfigure}
+\begin{subfigure}{2.9cm}
+  \centering
+  \includegraphics[width=0.9\linewidth]{figures/ac_xor_luminance_76_274007}
+  \caption{MOS $\simeq$ 3}
   \label{fig:sub1}
 \end{subfigure}%
-\begin{subfigure}{4.3cm}
+\begin{subfigure}{2.9cm}
   \centering
-  \includegraphics[width=0.9\linewidth]{figures/ac_dc_shuffle_xor_chrominance_luminance_76_140055}
-  \caption{All six parameters}
+  \includegraphics[width=0.9\linewidth]{figures/dc_shuffle_xor_chrominance_76_274007}
+  \caption{MOS $\simeq$ 4}
+  \label{fig:sub2}
+\end{subfigure}
+\begin{subfigure}{2.9cm}
+  \centering
+  \includegraphics[width=0.9\linewidth]{figures/ac_shuffle_chrominance_76_274007}
+  \caption{MOS $\simeq$ 5}
   \label{fig:sub2}
 \end{subfigure}
 
-\caption{Example of different distortions}
+\caption{Example of images for different MOS}
 \label{fig:images}
-\end{figure}
+\end{figure*}
 
-\textit{Explain shuffle and xor and maybe link Vincent's paper}. We use the training images from the BSDS500 \cite{bsds500} dataset as our input images for a total of $27 * 200 = 5400$ cryptocompressed images.
+% \begin{figure}[ht]
+% \centering
+% \begin{subfigure}{4.3cm}
+%   \centering
+%   \includegraphics[width=0.9\linewidth]{figures/140055}
+%   \caption{Original image}
+%   \label{fig:sub1}
+% \end{subfigure}%
+% \begin{subfigure}{4.3cm}
+%   \centering
+%   \includegraphics[width=0.9\linewidth]{figures/ac_shuffle_xor_chrominance_luminance_76_140055}
+%   \caption{ac shuffle xor chroma luma}
+%   \label{fig:sub2}
+% \end{subfigure}
+% \begin{subfigure}{4.3cm}
+%   \centering
+%   \includegraphics[width=0.9\linewidth]{figures/dc_xor_chrominance_luminance_76_140055}
+%   \caption{dc xor chroma luma}
+%   \label{fig:sub1}
+% \end{subfigure}%
+% \begin{subfigure}{4.3cm}
+%   \centering
+%   \includegraphics[width=0.9\linewidth]{figures/ac_dc_shuffle_xor_chrominance_luminance_76_140055}
+%   \caption{All six parameters}
+%   \label{fig:sub2}
+% \end{subfigure}
 
-The 27 distortions are given in Appendix \ref{ann:distortions}, they are named according to the parameters enabled and are sorted by MOS, as explained in Section \ref{sec:evaluation}, they are later designated by their number for ease of use.
+% \caption{Example of different distortions}
+% \label{fig:images}
+% \end{figure}
+
+The \textit{xor} parameter corresponds to the method proposed by Puech \textit{et al.} \cite{fernandez2012advanced}. This method partially encrypts the image. This can be useful for partial visualisation, even if we only use it on the whole image, and it has two main strengths: it does not increase the size of the JPEG bitstream and it changes the DCT coefficients histogram. We encrypt the amplitude part of non null AC coefficients \textit{i.e.} the concatenation of the amplitude of each coefficient of each block $[A_0^i,..., A_k^i,..., A_0^n,..., A_k^n]$, where $n$ is the number of blocks. The amplitude sequence is denoted $A = [a_0,..., a_l]$ where $l$ is the number of amplitude bits. A standard stream cipher function is used to generate a pseudo-random sequence $E = [e_0,..., e_l]$ from a secret key. This sequence is XORed with the incoming plaintext to produce a ciphered sequence $\widetilde{A} = \widetilde{a}_0,..., \widetilde{a}_l$ where $\widetilde{a}_i = a_i \oplus e_i, i \in [0,l]$. The encrypted sequence is substitued to the amplitudes in the original bitstream.
+
+The \textit{shuffle} parameter corresponds to a full inter-block shuffle (FIBS), proposed by Li and Yuan \cite{li2007leak}. This method, depending on our parameters, scrambles DC coefficients and same frequency AC coefficients. As it scrambles all coefficients, run length encoding does not perform as well and the size of the image can increases. According to the authors, the use of all AC coefficients, zero as well as non-zero, creates a more secure image, less sensitive to jigsaw puzzle attacks.
+
+We use the training images from the BSDS500 \cite{amfm_pami2011} dataset as our input images for a total of $27 * 200 = 5400$ cryptocompressed images.
+
+The 27 distortions are given in Appendix \ref{ann:distortions}, they are named according to the parameters enabled and are sorted by MOS, as explained in Section \ref{sec:evaluation}. They are later designated by their number for ease of use.
 
 \section{Image evaluation}
 \label{sec:evaluation}
@@ -134,10 +168,7 @@ We had a total of \textit{N} different person do the evaluation. They had to giv
 \textbf{4 :} The distortion is slightly annoying, but the content is clear\\
 \textbf{5 :} The distortion is not annoying at all \\
 
-They had to rate 81 images, three for every distortion, the sessions were 10 to 15 minutes long, depending on the person. Each image was seen at most once by the user, to prevent them from recognising it and give it a higher score. The distortions order was shuffled differently for every evaluation and repeated three times in the same order. We chose to have every distortion rated three times because during our preliminary tests, we saw that for the first few images, the user was not confident on the score to give to an image, confidence that improved as they saw more images and distortion. It allowed us to filter the outliers caused by the learning curve while still having a good amount of rating.
-
-The images were evaluated in a dim room, on a \textit{details of the screen} screen, about $n$ meters away and around eyes level. The user could only see one image at a time, a new image shown once the previous had been rated.
-The MOS obtained during the evaluation are given Fig. \ref{fig:mos}. The name of the distortions are given in Appendix \ref{ann:distortions}. We can see that after distortions $17$, the MOS get marginally better, this is due to the absence of the parameter $luminance$, the $shuffle$ and $xor$ are only performed on the chrominance, hence the better ratings.
+They had to rate 81 images, three for every distortion, the sessions were 10 to 15 minutes long, depending on the person. Each image was seen at most once by the user, to prevent them from recognising it and give it a higher score. The distortions order was shuffled differently for every evaluation and repeated three times in the same order. We chose to have every distortion rated three times because during our preliminary tests, we saw that for the first few images, the user was not confident on the score to give to an image, confidence that improved as they saw more images and distortions. It allowed us to filter the outliers caused by the learning curve while still having a good amount of rating.
 
 \begin{figure}[ht]
   \centering
@@ -146,21 +177,80 @@ The MOS obtained during the evaluation are given Fig. \ref{fig:mos}. The name of
   \caption{MOS for the 27 distortions.\label{fig:mos} }
 \end{figure}
 
-Our goal is to predict the rating a human would give to an image. In the best case scenario, a metric would be totally correlated with human rating and could be used to completely replace humans in image evaluation, this is however not the case, at least not for the metrics we selected, as shown in figures \ref{fig:psnr} and \ref{fig:ssim}. Detailed results are available Table \ref{fig:table}
+The images were evaluated in a dim room, on a \textit{details of the screen} screen, about $n$ meters away and around eyes level. The user could only see one image at a time, a new image shown once the previous had been rated.
+The MOS obtained during the evaluation are given Fig. \ref{fig:mos}. The name of the distortions are given in Appendix \ref{ann:distortions}. We can see that after distortions $17$, the MOS get marginally better, this is due to the absence of the parameter $luminance$, the $shuffle$ and $xor$ are only performed on the chrominance, hence the better ratings.
+We give a quick overview of a few selected metrics we used for image analysis. For a more in-depth review, we refer the reader to \cite{hofbauer2016identifying}.
+
+\textbf{PSNR:} Even though it is known that the PSNR is not well correlated with human judgment, it is still widely used due to its speed and ease of use. The range is [0; $+\infty$], where two identical images would have a PSNR of $+\infty$.
+
+\textbf{SSIM\cite{wang2004image}:} (Structural Similarity Index Measure). A luminance score, au contrast score and a structure score are combined to obtain the actual SSIM score. It has a range of [0;1] where identical images have a score of 1.
+
+\textbf{ESS\cite{mao2004security}:} (Edge Similarity Score). It uses non overlapping 8x8 block directions to compare images. With the range [0;1], a higher score reflects a less distorted image.
+
+\textbf{LSS\cite{mao2004security}:} (Luminance Similarity Score). It uses non overlapping 8x8 block average luminance to compare images. With the range [-8.5; 1] for default parameters of $\alpha=0.1$ and $\beta=3$, a higher score reflects a less distorted image.
+
+\textbf{NPCR\cite{chen2004symmetric, mao2004novel}:} It is the number of pixel changes between images. Its range is [0;100], where a fully encrypted image has a NPCR close to 100, where almost all the pixels changed.
+
+\textbf{UACI\cite{chen2004symmetric, mao2004novel}:} It is the unified averaged changed intensity. It is the average intensity difference between two images. Its range is [0;100], where a fully encrypted image has a value close to 33.
+
+% \textbf{Entropy :} It is the amount of information in an image, for an 8-bit image, so an entropy of 8 would be the target for a full encryption method. It ranges from 0 to 8 in this case.
+
+% \textbf{Correlation :} The correlation coefficient ranges from 0 to 1, it is the average correlation of adjacent pixels in an image, where a natural image would be highly correlated and a fully encrypted image would have low correlation.
+
+
+Our goal is to predict the rating a human would give to an image. In the best case scenario, a metric would be totally correlated with human rating and could be used to completely replace humans in image evaluation, this is however not the case, at least not for the metrics we selected, as shown in Fig. \ref{fig:images}.
 
 \begin{figure}[ht]
+\centering
+\begin{subfigure}{4.3cm}
   \centering
-  \includegraphics[width=8.5cm]{figures/mos_psnr}
-  \vspace{-5mm}
-  \caption{MOS on the x-axis and PSNR on the y-axis\label{fig:psnr} }
+  \includegraphics[width=1\linewidth]{figures/mos_ssim}
+  \caption{\pbox{2.81cm}{Left axis : PSNR $\bigcirc$ Right axis : SSIM $\triangle$}}
+  \label{fig:sub1}
+\end{subfigure}%
+\begin{subfigure}{4.3cm}
+  \centering
+  \includegraphics[width=1\linewidth]{figures/mos_ess}
+  \caption{\pbox{2.81cm}{Left axis : LSS $\bigcirc$ Right axis : ESS $\triangle$}}
+  \label{fig:sub2}
+\end{subfigure}
+\begin{subfigure}{4.3cm}
+  \centering
+  \includegraphics[width=1\linewidth]{figures/mos_npcr}
+  \caption{\pbox{2.81cm}{Left axis : UACI $\bigcirc$ Right axis : NPCR $\triangle$}}
+  \label{fig:sub3}
+\end{subfigure}%
+\begin{subfigure}{4.3cm}
+  \centering
+  \includegraphics[width=1\linewidth]{figures/ssim_detail_11}
+  \caption{Breakdown of SSIM score for a single distortion}
+  % \includegraphics[width=1\linewidth]{figures/mos_entropy}
+  \label{fig:sub4}
+\end{subfigure}
+% \begin{subfigure}{4.3cm}
+%   \centering
+%   \includegraphics[width=1\linewidth]{figures/mos_corr_vert}
+%   \caption{dc xor chroma luma}
+%   \label{fig:sub2}
+% \end{subfigure}%
+
+\caption{Plots of different metrics with the MOS on the x-axis}
+\label{fig:images}
 \end{figure}
 
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=8.5cm]{figures/mos_ssim}
-  \caption{MOS on the x-axis and SSIM on the y-axis\label{fig:ssim} }
-  \vspace{-5mm}
-\end{figure}
+% \begin{figure}[ht]
+%   \centering
+%   \includegraphics[width=8.5cm]{figures/mos_psnr}
+%   \vspace{-5mm}
+%   \caption{MOS on the x-axis and PSNR on the y-axis\label{fig:psnr} }
+% \end{figure}
+
+% \begin{figure}[ht]
+%   \centering
+%   \includegraphics[width=8.5cm]{figures/mos_ssim}
+%   \caption{MOS on the x-axis and SSIM on the y-axis\label{fig:ssim} }
+%   \vspace{-5mm}
+% \end{figure}
 % \begin{figure}[ht]
 %   \centering
 %   \includegraphics[width=8.5cm]{figures/mos_ess}
@@ -192,51 +282,51 @@ Our goal is to predict the rating a human would give to an image. In the best ca
 %   \caption{MOS on the x-axis and horizontal correlation on the y-axis\label{fig:correlation} }
 % \end{figure}
 
-As we can se from these figures, most metrics actually follow a rough line, but distortions $5$ to $17$ are problematic and prevent us from predicting the MOS. These distortions also happen to be between a MOS of 2 and 3, where the threshold for a confidential image would be. Even the SSIM, which is the most accurate metric in our experiment, fails to predict the MOS, as shown in Fig.~\ref{fig:ssim_detail_11}. The SSIM ranges from 0 to 1, and from Fig.~\ref{fig:ssim_detail_11}, we can see that for the same MOS the SSIM goes across almost all its range. A similar behavior is seen for the other metrics. Table~\ref{fig:table} summarizes our results.
+As we can se from these figures, most metrics actually follow a rough line, but distortions $5$ to $17$ are problematic and prevent us from predicting the MOS. These distortions also happen to be between a MOS of 2 and 3, where the threshold for a confidential image would be. Even the SSIM, which is the most accurate metric in our experiment, fails to predict the MOS, as shown in Fig.~\ref{fig:sub4}. The SSIM ranges from 0 to 1, and from Fig.~\ref{fig:sub4}, we can see that for the same MOS the SSIM goes across almost all its range. A similar behavior is seen for the other metrics.
 
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=8.5cm]{figures/ssim_detail_11}
-  \caption{Details of the MOS on the x-axis and the SSIM on the y-axis for the $11^{th}$ distortion \label{fig:ssim_detail_11} }
-\end{figure}
+% \begin{figure}[ht]
+%   \centering
+%   \includegraphics[width=8.5cm]{figures/ssim_detail_11}
+%   \caption{Details of the MOS on the x-axis and the SSIM on the y-axis for the $11^{th}$ distortion \label{fig:ssim_detail_11} }
+% \end{figure}
 
-  \begin{table*}[ht]
-    \centering
-    \scalebox{0.8}{
-      \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
-    \hline
-  index	&  MOS		&  psnr		&  entropy	&  corr\_horiz	&  corr\_vert	&  uaci		&  npcr		&  ssim		&  lss		&  ess		\\ \hline 
-0	& 1.0 (0.0)	& 11.45 (2.72)	& 7.31 (0.39)	& 0.82 (0.05)	& 0.82 (0.05)	& 21.99 (6.42)	& 99.05 (0.73)	& 0.09 (0.07)	& -1.43 (0.52)	& 0.56 (0.2)	\\ \hline 
-1	& 1.0 (0.0)	& 9.02 (1.93)	& 7.69 (0.16)	& 0.84 (0.04)	& 0.84 (0.04)	& 29.32 (6.34)	& 99.46 (0.18)	& 0.06 (0.04)	& -1.88 (0.57)	& 0.56 (0.19)	\\ \hline 
-2	& 1.17 (0.38)	& 11.79 (2.82)	& 7.31 (0.39)	& 0.82 (0.05)	& 0.82 (0.05)	& 21.19 (6.46)	& 98.84 (1.19)	& 0.09 (0.07)	& -1.43 (0.52)	& 0.56 (0.2)	\\ \hline 
-3	& 1.2 (0.4)	& 9.79 (2.38)	& 7.62 (0.23)	& 0.83 (0.04)	& 0.83 (0.05)	& 27.03 (6.75)	& 99.31 (0.38)	& 0.06 (0.04)	& -1.88 (0.57)	& 0.57 (0.19)	\\ \hline 
-4	& 1.35 (0.51)	& 8.97 (1.97)	& 7.7 (0.19)	& 0.84 (0.04)	& 0.84 (0.04)	& 27.33 (6.32)	& 99.09 (0.31)	& 0.12 (0.09)	& -1.6 (0.57)	& 0.62 (0.2)	\\ \hline 
-5	& 1.82 (0.67)	& 9.76 (2.42)	& 7.6 (0.27)	& 0.83 (0.05)	& 0.83 (0.04)	& 24.22 (6.68)	& 98.46 (0.95)	& 0.12 (0.09)	& -1.6 (0.57)	& 0.63 (0.19)	\\ \hline 
-6	& 2.02 (0.78)	& 18.46 (3.04)	& 7.3 (0.41)	& 0.87 (0.07)	& 0.88 (0.07)	& 9.12 (3.17)	& 96.41 (3.52)	& 0.23 (0.12)	& 0.16 (0.2)	& 0.58 (0.18)	\\ \hline 
-7	& 2.08 (0.58)	& 9.63 (2.14)	& 7.69 (0.18)	& 0.86 (0.03)	& 0.86 (0.03)	& 27.3 (6.51)	& 99.35 (0.23)	& 0.33 (0.13)	& -1.84 (0.55)	& 0.73 (0.16)	\\ \hline 
-8	& 2.24 (0.73)	& 18.99 (3.09)	& 7.27 (0.42)	& 0.89 (0.06)	& 0.89 (0.06)	& 8.57 (3.02)	& 96.24 (3.59)	& 0.25 (0.13)	& 0.18 (0.2)	& 0.58 (0.19)	\\ \hline 
-9	& 2.32 (0.59)	& 12.47 (3.03)	& 7.3 (0.4)	& 0.83 (0.04)	& 0.84 (0.04)	& 19.59 (6.28)	& 98.76 (0.9)	& 0.42 (0.14)	& -1.38 (0.51)	& 0.74 (0.16)	\\ \hline 
-10	& 2.37 (0.63)	& 18.71 (3.13)	& 7.28 (0.42)	& 0.87 (0.07)	& 0.87 (0.07)	& 8.84 (3.19)	& 95.83 (4.29)	& 0.23 (0.12)	& 0.16 (0.2)	& 0.58 (0.18)	\\ \hline 
-11	& 2.42 (0.68)	& 18.5 (3.03)	& 7.18 (0.48)	& 0.87 (0.07)	& 0.88 (0.07)	& 7.74 (2.99)	& 93.26 (5.3)	& 0.38 (0.16)	& 0.34 (0.22)	& 0.65 (0.18)	\\ \hline 
-12	& 2.47 (0.5)	& 9.58 (2.17)	& 7.7 (0.2)	& 0.86 (0.03)	& 0.86 (0.03)	& 24.47 (6.36)	& 98.47 (0.5)	& 0.43 (0.14)	& -1.54 (0.57)	& 0.74 (0.15)	\\ \hline 
-13	& 2.57 (0.61)	& 10.52 (2.67)	& 7.6 (0.25)	& 0.85 (0.03)	& 0.85 (0.03)	& 24.89 (6.89)	& 99.04 (0.5)	& 0.33 (0.13)	& -1.84 (0.55)	& 0.73 (0.15)	\\ \hline 
-14	& 2.58 (0.72)	& 19.24 (3.17)	& 7.26 (0.43)	& 0.89 (0.06)	& 0.89 (0.06)	& 8.31 (3.03)	& 95.67 (4.37)	& 0.25 (0.13)	& 0.18 (0.2)	& 0.58 (0.18)	\\ \hline 
-15	& 2.7 (0.46)	& 18.75 (3.11)	& 7.16 (0.49)	& 0.87 (0.07)	& 0.88 (0.07)	& 7.4 (2.99)	& 91.91 (6.31)	& 0.38 (0.16)	& 0.34 (0.22)	& 0.66 (0.18)	\\ \hline 
-16	& 2.79 (0.52)	& 12.84 (3.13)	& 7.28 (0.41)	& 0.84 (0.04)	& 0.84 (0.04)	& 18.76 (6.29)	& 98.31 (1.48)	& 0.42 (0.14)	& -1.38 (0.51)	& 0.75 (0.15)	\\ \hline 
-17	& 2.9 (0.43)	& 10.5 (2.71)	& 7.59 (0.29)	& 0.85 (0.03)	& 0.85 (0.03)	& 20.78 (6.65)	& 96.08 (1.75)	& 0.43 (0.14)	& -1.54 (0.57)	& 0.74 (0.15)	\\ \hline 
-18	& 4.0 (0.31)	& 18.77 (3.9)	& 7.35 (0.37)	& 0.94 (0.04)	& 0.94 (0.04)	& 7.91 (3.4)	& 93.51 (3.95)	& 1.0 (0.01)	& 0.95 (0.08)	& 0.86 (0.1)	\\ \hline 
-19	& 4.02 (0.34)	& 19.11 (4.1)	& 7.38 (0.35)	& 0.94 (0.04)	& 0.94 (0.04)	& 8.6 (3.72)	& 95.79 (3.12)	& 0.99 (0.01)	& 0.93 (0.1)	& 0.86 (0.1)	\\ \hline 
-20	& 4.03 (0.36)	& 18.79 (3.93)	& 7.39 (0.34)	& 0.94 (0.04)	& 0.94 (0.04)	& 8.9 (3.74)	& 96.2 (2.89)	& 0.99 (0.01)	& 0.92 (0.1)	& 0.86 (0.1)	\\ \hline 
-21	& 4.03 (0.37)	& 19.08 (4.08)	& 7.34 (0.38)	& 0.94 (0.04)	& 0.94 (0.04)	& 7.48 (3.33)	& 91.2 (4.87)	& 1.0 (0.01)	& 0.95 (0.07)	& 0.86 (0.1)	\\ \hline 
-22	& 4.24 (0.46)	& 23.42 (4.04)	& 7.21 (0.44)	& 0.93 (0.05)	& 0.93 (0.05)	& 5.17 (2.26)	& 93.73 (3.84)	& 1.0 (0.01)	& 0.94 (0.08)	& 0.86 (0.1)	\\ \hline 
-23	& 4.31 (0.46)	& 24.2 (4.26)	& 7.21 (0.45)	& 0.93 (0.05)	& 0.93 (0.05)	& 4.75 (2.18)	& 92.69 (4.34)	& 1.0 (0.01)	& 0.95 (0.07)	& 0.86 (0.09)	\\ \hline 
-24	& 4.75 (0.43)	& 31.54 (3.66)	& 7.12 (0.5)	& 0.93 (0.05)	& 0.93 (0.05)	& 1.57 (0.7)	& 75.75 (10.71)	& 1.0 (0.0)	& 0.99 (0.03)	& 0.87 (0.09)	\\ \hline 
-25	& 4.82 (0.38)	& 31.48 (3.71)	& 7.14 (0.48)	& 0.93 (0.05)	& 0.93 (0.05)	& 1.84 (0.83)	& 81.63 (9.59)	& 1.0 (0.0)	& 0.98 (0.04)	& 0.86 (0.1)	\\ \hline 
-26	& 4.83 (0.37)	& 32.06 (3.75)	& 7.13 (0.49)	& 0.93 (0.05)	& 0.93 (0.05)	& 1.72 (0.79)	& 80.68 (10.02)	& 1.0 (0.0)	& 0.99 (0.03)	& 0.86 (0.1)	\\ \hline 
-      \end{tabular}
-    }
-        \caption{Results for the 27 distortions \label{fig:table}}
-    \end{table*}
+ %  \begin{table*}[ht]
+%     \centering
+%     \scalebox{0.8}{
+%       \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
+%     \hline
+%   index	&  MOS		&  psnr		&  entropy	&  corr\_horiz	&  corr\_vert	&  uaci		&  npcr		&  ssim		&  lss		&  ess		\\ \hline 
+% 0	& 1.0 (0.0)	& 11.45 (2.72)	& 7.31 (0.39)	& 0.82 (0.05)	& 0.82 (0.05)	& 21.99 (6.42)	& 99.05 (0.73)	& 0.09 (0.07)	& -1.43 (0.52)	& 0.56 (0.2)	\\ \hline 
+% 1	& 1.0 (0.0)	& 9.02 (1.93)	& 7.69 (0.16)	& 0.84 (0.04)	& 0.84 (0.04)	& 29.32 (6.34)	& 99.46 (0.18)	& 0.06 (0.04)	& -1.88 (0.57)	& 0.56 (0.19)	\\ \hline 
+% 2	& 1.17 (0.38)	& 11.79 (2.82)	& 7.31 (0.39)	& 0.82 (0.05)	& 0.82 (0.05)	& 21.19 (6.46)	& 98.84 (1.19)	& 0.09 (0.07)	& -1.43 (0.52)	& 0.56 (0.2)	\\ \hline 
+% 3	& 1.2 (0.4)	& 9.79 (2.38)	& 7.62 (0.23)	& 0.83 (0.04)	& 0.83 (0.05)	& 27.03 (6.75)	& 99.31 (0.38)	& 0.06 (0.04)	& -1.88 (0.57)	& 0.57 (0.19)	\\ \hline 
+% 4	& 1.35 (0.51)	& 8.97 (1.97)	& 7.7 (0.19)	& 0.84 (0.04)	& 0.84 (0.04)	& 27.33 (6.32)	& 99.09 (0.31)	& 0.12 (0.09)	& -1.6 (0.57)	& 0.62 (0.2)	\\ \hline 
+% 5	& 1.82 (0.67)	& 9.76 (2.42)	& 7.6 (0.27)	& 0.83 (0.05)	& 0.83 (0.04)	& 24.22 (6.68)	& 98.46 (0.95)	& 0.12 (0.09)	& -1.6 (0.57)	& 0.63 (0.19)	\\ \hline 
+% 6	& 2.02 (0.78)	& 18.46 (3.04)	& 7.3 (0.41)	& 0.87 (0.07)	& 0.88 (0.07)	& 9.12 (3.17)	& 96.41 (3.52)	& 0.23 (0.12)	& 0.16 (0.2)	& 0.58 (0.18)	\\ \hline 
+% 7	& 2.08 (0.58)	& 9.63 (2.14)	& 7.69 (0.18)	& 0.86 (0.03)	& 0.86 (0.03)	& 27.3 (6.51)	& 99.35 (0.23)	& 0.33 (0.13)	& -1.84 (0.55)	& 0.73 (0.16)	\\ \hline 
+% 8	& 2.24 (0.73)	& 18.99 (3.09)	& 7.27 (0.42)	& 0.89 (0.06)	& 0.89 (0.06)	& 8.57 (3.02)	& 96.24 (3.59)	& 0.25 (0.13)	& 0.18 (0.2)	& 0.58 (0.19)	\\ \hline 
+% 9	& 2.32 (0.59)	& 12.47 (3.03)	& 7.3 (0.4)	& 0.83 (0.04)	& 0.84 (0.04)	& 19.59 (6.28)	& 98.76 (0.9)	& 0.42 (0.14)	& -1.38 (0.51)	& 0.74 (0.16)	\\ \hline 
+% 10	& 2.37 (0.63)	& 18.71 (3.13)	& 7.28 (0.42)	& 0.87 (0.07)	& 0.87 (0.07)	& 8.84 (3.19)	& 95.83 (4.29)	& 0.23 (0.12)	& 0.16 (0.2)	& 0.58 (0.18)	\\ \hline 
+% 11	& 2.42 (0.68)	& 18.5 (3.03)	& 7.18 (0.48)	& 0.87 (0.07)	& 0.88 (0.07)	& 7.74 (2.99)	& 93.26 (5.3)	& 0.38 (0.16)	& 0.34 (0.22)	& 0.65 (0.18)	\\ \hline 
+% 12	& 2.47 (0.5)	& 9.58 (2.17)	& 7.7 (0.2)	& 0.86 (0.03)	& 0.86 (0.03)	& 24.47 (6.36)	& 98.47 (0.5)	& 0.43 (0.14)	& -1.54 (0.57)	& 0.74 (0.15)	\\ \hline 
+% 13	& 2.57 (0.61)	& 10.52 (2.67)	& 7.6 (0.25)	& 0.85 (0.03)	& 0.85 (0.03)	& 24.89 (6.89)	& 99.04 (0.5)	& 0.33 (0.13)	& -1.84 (0.55)	& 0.73 (0.15)	\\ \hline 
+% 14	& 2.58 (0.72)	& 19.24 (3.17)	& 7.26 (0.43)	& 0.89 (0.06)	& 0.89 (0.06)	& 8.31 (3.03)	& 95.67 (4.37)	& 0.25 (0.13)	& 0.18 (0.2)	& 0.58 (0.18)	\\ \hline 
+% 15	& 2.7 (0.46)	& 18.75 (3.11)	& 7.16 (0.49)	& 0.87 (0.07)	& 0.88 (0.07)	& 7.4 (2.99)	& 91.91 (6.31)	& 0.38 (0.16)	& 0.34 (0.22)	& 0.66 (0.18)	\\ \hline 
+% 16	& 2.79 (0.52)	& 12.84 (3.13)	& 7.28 (0.41)	& 0.84 (0.04)	& 0.84 (0.04)	& 18.76 (6.29)	& 98.31 (1.48)	& 0.42 (0.14)	& -1.38 (0.51)	& 0.75 (0.15)	\\ \hline 
+% 17	& 2.9 (0.43)	& 10.5 (2.71)	& 7.59 (0.29)	& 0.85 (0.03)	& 0.85 (0.03)	& 20.78 (6.65)	& 96.08 (1.75)	& 0.43 (0.14)	& -1.54 (0.57)	& 0.74 (0.15)	\\ \hline 
+% 18	& 4.0 (0.31)	& 18.77 (3.9)	& 7.35 (0.37)	& 0.94 (0.04)	& 0.94 (0.04)	& 7.91 (3.4)	& 93.51 (3.95)	& 1.0 (0.01)	& 0.95 (0.08)	& 0.86 (0.1)	\\ \hline 
+% 19	& 4.02 (0.34)	& 19.11 (4.1)	& 7.38 (0.35)	& 0.94 (0.04)	& 0.94 (0.04)	& 8.6 (3.72)	& 95.79 (3.12)	& 0.99 (0.01)	& 0.93 (0.1)	& 0.86 (0.1)	\\ \hline 
+% 20	& 4.03 (0.36)	& 18.79 (3.93)	& 7.39 (0.34)	& 0.94 (0.04)	& 0.94 (0.04)	& 8.9 (3.74)	& 96.2 (2.89)	& 0.99 (0.01)	& 0.92 (0.1)	& 0.86 (0.1)	\\ \hline 
+% 21	& 4.03 (0.37)	& 19.08 (4.08)	& 7.34 (0.38)	& 0.94 (0.04)	& 0.94 (0.04)	& 7.48 (3.33)	& 91.2 (4.87)	& 1.0 (0.01)	& 0.95 (0.07)	& 0.86 (0.1)	\\ \hline 
+% 22	& 4.24 (0.46)	& 23.42 (4.04)	& 7.21 (0.44)	& 0.93 (0.05)	& 0.93 (0.05)	& 5.17 (2.26)	& 93.73 (3.84)	& 1.0 (0.01)	& 0.94 (0.08)	& 0.86 (0.1)	\\ \hline 
+% 23	& 4.31 (0.46)	& 24.2 (4.26)	& 7.21 (0.45)	& 0.93 (0.05)	& 0.93 (0.05)	& 4.75 (2.18)	& 92.69 (4.34)	& 1.0 (0.01)	& 0.95 (0.07)	& 0.86 (0.09)	\\ \hline 
+% 24	& 4.75 (0.43)	& 31.54 (3.66)	& 7.12 (0.5)	& 0.93 (0.05)	& 0.93 (0.05)	& 1.57 (0.7)	& 75.75 (10.71)	& 1.0 (0.0)	& 0.99 (0.03)	& 0.87 (0.09)	\\ \hline 
+% 25	& 4.82 (0.38)	& 31.48 (3.71)	& 7.14 (0.48)	& 0.93 (0.05)	& 0.93 (0.05)	& 1.84 (0.83)	& 81.63 (9.59)	& 1.0 (0.0)	& 0.98 (0.04)	& 0.86 (0.1)	\\ \hline 
+% 26	& 4.83 (0.37)	& 32.06 (3.75)	& 7.13 (0.49)	& 0.93 (0.05)	& 0.93 (0.05)	& 1.72 (0.79)	& 80.68 (10.02)	& 1.0 (0.0)	& 0.99 (0.03)	& 0.86 (0.1)	\\ \hline 
+%       \end{tabular}
+%     }
+%         \caption{Results for the 27 distortions \label{fig:table}}
+%     \end{table*}
 % \section{REFERENCES}
 % \label{sec:ref}
 
